--- a/iPhoneTransit/MainWindow.xib
+++ b/iPhoneTransit/MainWindow.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="121"/>
+			<integer value="106"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -40,25 +40,25 @@
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="848383291">
-					<string key="IBUITitle">Favorite</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="792187309">
-						<string key="IBUITitle">Favorite</string>
+				<object class="IBUIViewController" key="IBUISelectedViewController" id="1024858337">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="765670903">
+						<string key="IBUITitle">Closest</string>
 						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
+					<string key="IBUINibName">ClosestView</string>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<reference ref="848383291"/>
-					<object class="IBUIViewController" id="1024858337">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="765670903">
-							<string key="IBUITitle">Closest</string>
+					<object class="IBUIViewController" id="848383291">
+						<string key="IBUITitle">Favorite</string>
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="792187309">
+							<string key="IBUITitle">Favorite</string>
 							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
-						<string key="IBUINibName">StopsView</string>
 					</object>
+					<reference ref="1024858337"/>
 					<object class="IBUIViewController" id="669967776">
 						<string key="IBUITitle">Recent</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="330905715">
@@ -73,6 +73,7 @@
 							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
+						<string key="IBUINibName">SearchView</string>
 					</object>
 					<object class="IBUIViewController" id="399854583">
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="579069738">
@@ -356,7 +357,11 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">SearchViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">StopsView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">mySearchBar</string>
+						<string key="NS.object.0">UISearchBar</string>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/SearchViewController.h</string>
@@ -408,7 +413,11 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">StopsView</string>
-					<string key="superclassName">UITableViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">stopsTableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/StopsView.h</string>
