--- a/iPhoneTransit/MainWindow.xib
+++ b/iPhoneTransit/MainWindow.xib
@@ -39,35 +39,42 @@
 			</object>
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
+				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
+					<bool key="IBUIPrompted">NO</bool>
+				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="1024858337">
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="765670903">
-						<string key="IBUITitle">Closest</string>
+				<object class="IBUIViewController" key="IBUISelectedViewController" id="669967776">
+					<string key="IBUITitle">Recent Stops</string>
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="330905715">
+						<string key="IBUITitle">Recent</string>
 						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
-					<string key="IBUINibName">ClosestView</string>
+					<string key="IBUINibName">StopsView</string>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIViewController" id="848383291">
-						<string key="IBUITitle">Favorite</string>
+						<string key="IBUITitle">Favorite Stops/Bus</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="792187309">
 							<string key="IBUITitle">Favorite</string>
 							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
+						<string key="IBUINibName">StopsView</string>
 					</object>
-					<reference ref="1024858337"/>
-					<object class="IBUIViewController" id="669967776">
-						<string key="IBUITitle">Recent</string>
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="330905715">
-							<string key="IBUITitle">Recent</string>
+					<object class="IBUIViewController" id="1024858337">
+						<string key="IBUITitle">Closest Stops</string>
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="765670903">
+							<string key="IBUITitle">Closest</string>
 							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
+						<string key="IBUINibName">ClosestView</string>
 					</object>
+					<reference ref="669967776"/>
 					<object class="IBUIViewController" id="268481961">
+						<string key="IBUITitle">Search</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="807309489">
 							<string key="IBUITitle">Search</string>
 							<reference key="IBUITabBar"/>
@@ -76,6 +83,7 @@
 						<string key="IBUINibName">SearchView</string>
 					</object>
 					<object class="IBUIViewController" id="399854583">
+						<string key="IBUITitle">Settings</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="579069738">
 							<string key="IBUITitle">Settings</string>
 							<reference key="IBUITabBar"/>
@@ -341,7 +349,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FavoriteViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">StopsView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/FavoriteViewController.h</string>
@@ -349,7 +357,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">RecentViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">StopsView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/RecentViewController.h</string>
