--- a/iPhoneTransit/MainWindow.xib
+++ b/iPhoneTransit/MainWindow.xib
@@ -8,6 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="106"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -25,20 +26,6 @@
 			<object class="IBUIWindow" id="380026005">
 				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">1316</int>
-				<object class="NSMutableArray" key="NSSubviews">
-					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIActivityIndicatorView" id="659523343">
-						<reference key="NSNextResponder" ref="380026005"/>
-						<int key="NSvFlags">1316</int>
-						<string key="NSFrame">{{152, 237}, {20, 20}}</string>
-						<reference key="NSSuperview" ref="380026005"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<bool key="IBUIHidesWhenStopped">NO</bool>
-						<int key="IBUIStyle">2</int>
-					</object>
-				</object>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
 				<string key="NSFrameSize">{320, 480}</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -62,6 +49,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">search.png</string>
 						</object>
+						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
 					<object class="IBUINavigationBar" key="IBUINavigationBar" id="134292859">
@@ -77,6 +65,7 @@
 						<object class="IBUIViewController" id="300545996">
 							<string key="IBUITitle">Search for Stops</string>
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="577340849">
+								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Item</string>
 							</object>
 							<reference key="IBUIParentViewController" ref="127930591"/>
@@ -86,11 +75,12 @@
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
+					<reference ref="127930591"/>
 					<object class="IBUINavigationController" id="560148549">
 						<string key="IBUITitle">Favorite</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="620388425">
-							<string key="IBUITitle">Favorite</string>
 							<int key="IBUISystemItemIdentifier">1</int>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="111056915">
@@ -120,6 +110,7 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">closest.png</string>
 							</object>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="412436623">
@@ -142,7 +133,6 @@
 							</object>
 						</object>
 					</object>
-					<reference ref="127930591"/>
 					<object class="IBUIViewController" id="399854583">
 						<string key="IBUITitle">Settings</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="579069738">
@@ -151,6 +141,7 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">setting.png</string>
 							</object>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<string key="IBUINibName">SettingsView</string>
@@ -197,11 +188,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">indicator</string>
-						<reference key="source" ref="664661524"/>
-						<reference key="destination" ref="659523343"/>
+						<string key="label">delegate</string>
+						<reference key="source" ref="1034742383"/>
+						<reference key="destination" ref="664661524"/>
 					</object>
-					<int key="connectionID">124</int>
+					<int key="connectionID">140</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -220,7 +211,6 @@
 						<reference key="object" ref="380026005"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="659523343"/>
 						</object>
 						<reference key="parent" ref="957960031"/>
 					</object>
@@ -243,8 +233,8 @@
 							<reference ref="795333663"/>
 							<reference ref="399854583"/>
 							<reference ref="560148549"/>
-							<reference ref="127930591"/>
 							<reference ref="248583402"/>
+							<reference ref="127930591"/>
 						</object>
 						<reference key="parent" ref="957960031"/>
 						<string key="objectName">Tab Bar Controller</string>
@@ -272,11 +262,6 @@
 						<int key="objectID">116</int>
 						<reference key="object" ref="579069738"/>
 						<reference key="parent" ref="399854583"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">123</int>
-						<reference key="object" ref="659523343"/>
-						<reference key="parent" ref="380026005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">125</int>
@@ -395,7 +380,6 @@
 					<string>106.IBPluginDependency</string>
 					<string>107.IBPluginDependency</string>
 					<string>115.CustomClassName</string>
-					<string>123.IBPluginDependency</string>
 					<string>127.CustomClassName</string>
 					<string>132.CustomClassName</string>
 					<string>137.CustomClassName</string>
@@ -409,11 +393,10 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>TransitApp</string>
 					<string>UIResponder</string>
-					<string>{{459, 366}, {320, 480}}</string>
+					<string>{{447, 58}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>SettingsViewController</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>FavoriteViewController</string>
 					<string>ClosestViewController</string>
 					<string>SearchViewController</string>
@@ -452,7 +435,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">139</int>
+			<int key="maxID">140</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -565,13 +548,11 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>indicator</string>
 							<string>tabBarController</string>
 							<string>window</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIActivityIndicatorView</string>
 							<string>UITabBarController</string>
 							<string>UIWindow</string>
 						</object>
