--- a/iBus-Universal/MainWindow.xib
+++ b/iBus-Universal/MainWindow.xib
@@ -8,6 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="137"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -48,6 +49,7 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">setting.png</string>
 						</object>
+						<reference key="IBUITabBar"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
 					<object class="IBUINavigationBar" key="IBUINavigationBar" id="170635456">
@@ -62,10 +64,10 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="IBUIViewController" id="481969161">
 							<object class="IBUINavigationItem" key="IBUINavigationItem" id="130104590">
+								<reference key="IBUINavigationBar"/>
 								<string key="IBUITitle">Item</string>
 							</object>
 							<reference key="IBUIParentViewController" ref="691534957"/>
-							<string key="IBUINibName">SettingsView</string>
 						</object>
 					</object>
 				</object>
@@ -75,6 +77,7 @@
 						<string key="IBUITitle">Favorites</string>
 						<object class="IBUITabBarItem" key="IBUITabBarItem" id="869703103">
 							<int key="IBUISystemItemIdentifier">1</int>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="385443022">
@@ -103,6 +106,7 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">search.png</string>
 							</object>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="569376398">
@@ -132,6 +136,7 @@
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">closest.png</string>
 							</object>
+							<reference key="IBUITabBar"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUINavigationBar" key="IBUINavigationBar" id="506012443">
@@ -484,14 +489,6 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">SearchRangeCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="683860741">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/SettingsViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">SettingsViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="NSMutableDictionary" key="actions">
@@ -516,24 +513,26 @@
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>aboutCell</string>
-							<string>aboutWebCell</string>
 							<string>rangeCell</string>
-							<string>rangeSlider</string>
-							<string>recentCell</string>
-							<string>recentSlider</string>
+							<string>resultCell</string>
 							<string>settingView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UITableViewCell</string>
-							<string>UIWebView</string>
-							<string>SearchRangeCell</string>
-							<string>UISlider</string>
-							<string>UITableViewCell</string>
-							<string>UISlider</string>
+							<string>WebViewCell</string>
+							<string>SliderCell</string>
+							<string>SliderCell</string>
 							<string>UITableView</string>
 						</object>
 					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="683860741">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/SettingsViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SliderCell</string>
+					<string key="superclassName">UITableViewCell</string>
 					<reference key="sourceIdentifier" ref="683860741"/>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -576,6 +575,11 @@
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/TransitAppDelegate.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">WebViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<reference key="sourceIdentifier" ref="683860741"/>
 				</object>
 			</object>
 		</object>
